fix z-index

--- a/src/styles/_toastic.scss
+++ b/src/styles/_toastic.scss
@@ -5,7 +5,6 @@
   align-items: center;
   gap: 8px;
   font-weight: 500;
-  z-index: var(--react-toastic-zindex);
   color: var(--react-toastic-color-black);
   background: var(--react-toastic-color-white);
   padding: 14px 8px 14px 12px;
